ICE-8597 - Fixed sort control wrapping.

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -57,6 +57,7 @@
 }
 
 .ui-datatable .ui-header-right {
+    display:inline-block;
     white-space: nowrap;
     position: relative;
 }
